syntax = "proto3";

option go_package = "github.com/musaprg/dispatchrunnet/ttrpc";

package ttrpc;

service Hello {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string text = 1;
}
